...
                        ZStack{
                            RoundedRectangle(cornerRadius: 25.0).foregroundColor(.white).frame(width: 312, height: 50, alignment: .center)
                            HStack(spacing:0){
                                Image("em").padding()
                                Divider()
                                    .frame(width:1, height: 50, alignment: .center)
//                                CustEm(place: Text("Ivanov@mail.com"), email: $email)
                                TextField("Ivanov@mail.com", text: $email).frame(width: 260, height: 50, alignment: .center).foregroundColor(Color("tt"))
                            }.frame(width: 312, height: 50, alignment: .center)
                        }
                        ZStack{
                            RoundedRectangle(cornerRadius: 25.0).foregroundColor(.white).frame(width: 312, height: 50, alignment: .center)
                            HStack(spacing:0){
...
